redis-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster
  labels:
    app: redis-cluster
spec:
  publishNotReadyAddresses: true
  type: ClusterIP
  ports:
  - protocol: TCP
    name: redis
    port: 6379
    targetPort: 6379
  - name: gossip
    port: 16379
    targetPort: 16379 
  selector:
    app: redis-cluster
